k8s-deploy/04-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: ecom-app
  labels:
    app.kubernetes.io/name: catalog-service
    app.kubernetes.io/part-of: ecom-app
spec:
  type: NodePort
  selector:
    app: catalog-service
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30081
