k8s-deploy/06-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-route
  namespace: ecom-app
  labels:
    app.kubernetes.io/name: catalog-service
    app.kubernetes.io/part-of: ecom-app
spec:
  parentRefs:
    - name: ecom-app-gateway
      namespace: ecom-app
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /catalog
      backendRefs:
        - name: catalog-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/catalog
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /catalog
      backendRefs:
        - name: catalog-service
          port: 80
